--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@
 
 }
 span{
-    color: red;
+    color: #ff0000;
 }
 html{
-    background-color: black;
+    background-color: #000000;
     padding: 0;
     margin: 0;
 }
@@ -42,11 +42,12 @@ html{
 }
 .post{
     /* background-color: brown; */
-    height: 100svh;
+   
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin: 20px;
     padding: 20px;
+
     display: flex;
 }
 
@@ -60,7 +61,9 @@ html{
 .post-hero{
     color: white;
     /* background-color: aqua; */
+    padding: 20px;
     width: 70%;
+        background-color: #1a1a1a;
     font-weight: 100;
 }
 
@@ -78,6 +81,10 @@ html{
     }
     .post-hero h1{
         text-align: center;
+    }
+    .post-hero  p{
+        font-size: 20px;
+        text-align: justify;
     }
  
 }
