add front pages

--- a/css/thought.css
+++ b/css/thought.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'nerd'; 
-    src: url('fonts/nerd.ttf') format('truetype');
+    src: url('../fonts/nerd.ttf') format('truetype');
 
 }
 @font-face {
     font-family: 'dotted'; 
-    src: url('fonts/dotted.ttf') format('truetype');
+    src: url('../fonts/dotted.ttf') format('truetype');
 
 }
 span{
@@ -28,6 +28,7 @@ html{
     font-family: 'dotted';
     color: white;
     font-style: oblique;
+    letter-spacing: 5px;
     /* background-color: blue; */
     text-decoration: underline;
     text-decoration-color: #888888;
@@ -59,6 +60,7 @@ html{
 .post-hero h1{
  font-family: 'dotted';
     text-decoration: underline;
+        letter-spacing: 5px;
       text-decoration-color: #888888;
 }
 .post-hero  p{
@@ -83,6 +85,7 @@ html{
 @media only screen and (max-width: 600px) {
     .title h1{
         font-size: 30px;
+            letter-spacing: normal;
     }
     .title p{
         font-size: 15px;
@@ -94,6 +97,7 @@ html{
     }
     .post-hero h1{
         text-align: center;
+            letter-spacing: normal;
     }
     .post-hero  p{
         font-size: 20px;
