--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,11 @@ a{
 
     .nav{
         padding: 10px;
+       
+        height: 100px;
+    }
+    .title{
+        margin-top: 0;
     }
 }
 /* 
