--- a/css/style.css
+++ b/css/style.css
@@ -380,30 +380,32 @@ a {
     }
 }
 
-.journey{
+.journey {
     display: flex;
     padding: 20px;
-    
+
 }
 
-.journey-title{
-  
+.journey-title {
+
     display: flex;
     flex-direction: column;
-text-align: center;
+    text-align: justify;
+    padding: 100px;
     justify-content: center;
     color: white;
 }
 
-.journey-title h1{
-      font-family: 'dotted';
-      font-size: 100px;
-        color: #353535;
+.journey-title h1 {
+    font-family: 'dotted';
+    font-size: 100px;
+    color: #353535;
 
 }
-.journey-title p{
+
+.journey-title p {
     font-family: 'nerd';
-  
+
     font-size: 50px;
 }
 
@@ -412,24 +414,24 @@ text-align: center;
 
 
 
-.journey-titler{
-  
+.journey-titler {
+
     display: flex;
     flex-direction: column;
-text-align: center;
-    justify-content: center;
+    padding: 20px;
     color: white;
 }
 
-.journey-titler h1{
-      font-family: 'dotted';
-      font-size: 100px;
-        color: #353535;
+.journey-titler h1 {
+    font-family: 'dotted';
+    font-size: 100px;
+    color: #353535;
 
 }
-.journey-titler p{
+
+.journey-titler p {
     font-family: 'nerd';
-  
+
     font-size: 50px;
 }
 
@@ -445,13 +447,14 @@ text-align: center;
 
 
 
-.all-journey img{
+.all-journey img {
     filter: grayscale(90%);
     width: 40svw;
-   background-position: center;
-   object-fit: cover;
+    background-position: center;
+    object-fit: cover;
     height: 50svw;
 }
+
 .all-journey {
     margin-top: 150px;
 }
@@ -460,26 +463,68 @@ text-align: center;
 
 
 
-    .journey-titler{
-  
-    display: flex;
-    flex-direction: column;
-text-align: start;
-letter-spacing: 2px;
-  padding: 20px;
-    color: white;
-}
+    .journey-titler {
 
-.journey-titler h1{
-      font-family: 'dotted';
-      font-size: 50px;
-        color: #353535;
 
-}
-.journey-titler p{
-    font-family: 'nerd';
-  
-    font-size: 30px;
+        text-align: start;
+        letter-spacing: 2px;
+        padding: 20px;
+
+    }
+
+    .journey-titler h1 {
+
+        font-size: 50px;
+
+
+    }
+
+    .journey-titler p {
+
+
+        font-size: 30px;
+    }
+
+
+
+
+
+    .journey-title {
+
+
+        text-align: start;
+        letter-spacing: 2px;
+        padding: 20px;
+
+    }
+
+    .journey-title h1 {
+
+        font-size: 50px;
+
+
+    }
+
+    .journey-title p {
+
+
+        font-size: 30px;
+    }
+
+    .journey{
+        flex-direction: column-reverse;
+        padding: 0;
+    }
+
+    .all-journey img {
+    filter: grayscale(90%);
+    width: 100%;
+  overflow-x: hidden;
+    background-position: center;
+    object-fit: cover;
+    gap: 20px
+    ;
+    height: 70svw;
 }
 
 
