--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@
 }
 
 .body {
-    margin: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 .white {
@@ -63,6 +64,10 @@ html {
         font-size: 30px;
         margin: 0;
     }
+    .body {
+    margin: 0px;
+    padding: 0px;
+}
 }
 
 a {
@@ -549,6 +554,8 @@ a {
     /* align-items: center; */
     flex-direction: column;
     background-color: red;
+    margin-top: 150px;
+
     padding: 20px;
 }
 
@@ -560,6 +567,7 @@ a {
 .footer-text{
     display: flex;
     justify-content: space-between;
+    font-size: 1.5dvw;
     font-family: 'nerd';
     color: white;
 }
@@ -572,5 +580,8 @@ a {
     align-items: center;
     
 }
+
+
+
 
 }
