--- a/css/style.css
+++ b/css/style.css
@@ -226,14 +226,14 @@ a {
 
 .pallete .gray {
     background-color: #353535;
-    width: 300px;
+    width: 20svw;
     font-family: 'dotted';
     height: 500px;
 }
 
 .pallete .red {
     background-color: #D71921;
-    width: 300px;
+   width: 20svw;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     font-family: 'dotted';
@@ -242,14 +242,14 @@ a {
 
 .pallete .white {
     background-color: #F1F1F1;
-    width: 300px;
+  width: 20svw;
     height: 500px;
     font-family: 'dotted';
 }
 
 .pallete .light-gray {
     background-color: #535353;
-    width: 300px;
+ width: 20svw;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     height: 500px;
@@ -258,7 +258,7 @@ a {
 
 .pallete .black {
     background-color: #000000;
-    width: 300px;
+ width: 20svw;
     height: 500px;
 
     font-family: 'dotted';
@@ -393,7 +393,8 @@ a {
 
 .journey {
     display: flex;
-    padding: 20px;
+ padding-top: 50px;
+
 
 }
 
@@ -401,8 +402,10 @@ a {
 
     display: flex;
     flex-direction: column;
+    padding: 50px;
     text-align: center;
     background-color: white;
+    justify-content: center;
 
     color: black;
 }
@@ -460,7 +463,7 @@ a {
     width: 40svw;
     background-position: center;
     object-fit: cover;
-    height: 100%;
+    min-height: 50svw;
 }
 
 .all-journey {
@@ -517,6 +520,7 @@ a {
         margin-top: 100px;
         letter-spacing: 2px;
         flex-direction: column;
+        padding: 10px;
 
 
     }
