--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
     padding: 0px;
 }
 
+a,button{
+    cursor: none;
+}
+
 .white {
     color: #F1F1F1;
     text-decoration: underline;
@@ -29,6 +33,7 @@ html {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    cursor: none;
     width: 100%;
 }
 
