--- a/css/style.css
+++ b/css/style.css
@@ -194,9 +194,9 @@ a {
     margin: 20px;
     text-align: center;
     color: #F1F1F1;
-    padding: 18px;
-    margin-left: -5px;
-    font-family: 'nerd';
+    padding: 20px;
+
+    font-family: 'dotted';
 }
 
 
