--- a/css/style.css
+++ b/css/style.css
@@ -194,8 +194,9 @@ a {
     margin: 20px;
     text-align: center;
     color: #F1F1F1;
-    padding: 20px;
-
+   
+  
+    font-size: 50px;
     font-family: 'dotted';
 }
 
