--- a/css/style.css
+++ b/css/style.css
@@ -461,10 +461,7 @@ a {
     margin: 0;
     padding: 0;
 }
-
-
-
-/* .journey {
+ .journey {
     display: flex;
  padding-top: 50px;
 
@@ -477,10 +474,10 @@ a {
     flex-direction: column;
     padding: 50px;
     text-align: center;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     justify-content: center;
 
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .journey-title h1 {
@@ -547,7 +544,7 @@ a {
 .journey-titler span {
     font-size: 50px;
     font-family: 'dotted';
-} */
+} 
 
 @media screen and (max-width: 600px) {
 
@@ -621,6 +618,7 @@ a {
     .all-journey img {
         filter: grayscale(90%);
         width: 100%;
+        height: 50%;
         overflow-x: hidden;
         background-position: center;
         object-fit: cover;
