--- a/css/style.css
+++ b/css/style.css
@@ -641,10 +641,11 @@ a {
 
 .footer {
     display: flex;
-    justify-content: center;
+
     /* align-items: center; */
     flex-direction: column;
     background-color: red;
+    height: 100svh;
     margin-top: 150px;
 
     padding: 20px;
@@ -652,7 +653,8 @@ a {
 
 .footer h1 {
     font-family: 'dotted';
-    font-size: 10.5svw;
+    font-size: 10svw;
+    text-align: start;
     color: white;
 }
 
@@ -670,6 +672,7 @@ a {
     .footer {
 
         align-items: center;
+        height: 50svh;
 
     }
 
